Add task assignment feature with dynamic user and task selection

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Jira Yardımcısı</title>
+    <title>Jira Helper</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         ::-webkit-scrollbar {
@@ -27,7 +27,20 @@
             line-height: 1.5;
         }
 
-        /* Switch tasarımı */
+        @keyframes spin {
+            from {
+                transform: rotate(0deg);
+            }
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        .animate-spin {
+            animation: spin 1s linear;
+        }
+
+        /* Switch design */
         .switch {
             position: relative;
             display: inline-block;
@@ -77,7 +90,7 @@
             transform: translateX(24px);
         }
 
-        /* Input focus efektleri */
+        /* Input focus effects */
         .focus-ring {
             transition: all 0.2s ease-in-out;
         }
@@ -123,7 +136,7 @@
             visibility: visible;
         }
 
-        /* Ana içeriğin kaymasını engellemek için bu stilleri kaldırıyoruz */
+        /* Main content styles */
         .main-content {
             position: relative;
             min-height: 100vh;
@@ -142,7 +155,7 @@
     <!-- Sidebar -->
     <div id="sidebar" class="sidebar p-6">
         <div class="flex justify-between items-center mb-6">
-            <h2 class="text-xl font-bold text-gray-800">Ayarlar</h2>
+            <h2 class="text-xl font-bold text-gray-800">Settings</h2>
             <button id="closeSidebar" class="text-gray-500 hover:text-gray-700">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                     stroke="currentColor">
@@ -157,22 +170,23 @@
                     <input type="checkbox" id="testMode">
                     <span class="slider"></span>
                 </label>
-                <label for="testMode" class="text-sm font-medium text-gray-700">Test Modu</label>
+                <label for="testMode" class="text-sm font-medium text-gray-700">Test Mode</label>
             </div>
             <!-- Excluded Tasks Panel -->
             <div class="space-y-4">
-                <h3 class="text-lg font-semibold text-gray-800 mb-4">Hariç Tutulacak Tasklar</h3>
+                <h3 class="text-lg font-semibold text-gray-800 mb-4">Excluded Tasks</h3>
                 <div class="space-y-3">
                     <textarea id="excludedTasksList"
                         class="w-full h-32 px-4 py-3 rounded-lg border border-gray-300 focus-ring resize-none font-mono text-sm"
-                        placeholder="S1-30899&#10;S1-12345">S1-30899</textarea>
+                        placeholder="S1-30899
+S1-12345">S1-30899</textarea>
                     <div class="flex items-center space-x-2 text-gray-500">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
                         </svg>
-                        <p class="text-xs">Her satıra bir task ID yazın</p>
+                        <p class="text-xs">Write one task ID per line</p>
                     </div>
                 </div>
             </div>
@@ -199,12 +213,12 @@
                     placeholder="Your Jira Account ID">
             </div>
             <div>
-                <label class="block text-sm font-medium text-gray-700 mb-1">Proje Kodu</label>
+                <label class="block text-sm font-medium text-gray-700 mb-1">Project Key</label>
                 <input type="text" id="projectKey" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring"
-                    placeholder="Örn: S1">
+                    placeholder="e.g., S1">
             </div>
             <div>
-                <label class="block text-sm font-medium text-gray-700 mb-1">Task Durumu</label>
+                <label class="block text-sm font-medium text-gray-700 mb-1">Task Status</label>
                 <select id="taskStatus" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring">
                     <option value="Selected for Development">Selected for Development</option>
                     <option value="To Do">To Do</option>
@@ -226,52 +240,90 @@
                                 d="M4 6h16M4 12h16M4 18h16" />
                         </svg>
                     </button>
-                    <h1 class="text-2xl font-bold text-gray-800">Jira Yardımcısı</h1>
+                    <h1 class="text-2xl font-bold text-gray-800">Jira Helper</h1>
                     <div class="w-6"></div>
                 </div>
             </div>
 
             <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
-                <!-- Sol Kolon: Kontrol Panelleri -->
+                <!-- Left Column: Control Panels -->
                 <div class="lg:col-span-1 space-y-8">
-                                        <!-- Leaderboard Panel -->
-                                        <div class="bg-white rounded-xl shadow-lg p-6 border border-gray-100">
-                                            <div class="flex justify-between items-center mb-4">
-                                                <h3 class="text-lg font-semibold text-gray-800">Leaderboard</h3>
-                                                <button id="refreshLeaderboard" class="text-blue-600 hover:text-blue-700">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
-                                                        fill="currentColor">
-                                                        <path fill-rule="evenodd"
-                                                            d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z"
-                                                            clip-rule="evenodd" />
-                                                    </svg>
-                                                </button>
-                                            </div>
-                                            <div id="leaderboardList" class="space-y-4">
-                                                <!-- Leaderboard items will be added here dynamically -->
-                                            </div>
-                                        </div>
+                    <!-- Task Assignment Panel -->
+                    <div class="bg-white rounded-xl shadow-lg p-6 border border-gray-100 mb-8">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="text-lg font-semibold text-gray-800">Task Assignment</h3>
+                            <button id="refreshTaskAssignment" class="text-blue-600 hover:text-blue-700 transition-transform duration-500">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                                    <path fill-rule="evenodd" d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z" clip-rule="evenodd"/>
+                                </svg>
+                            </button>
+                        </div>
+                        <div class="space-y-4">
+                            <!-- Task ID Selectbox -->
+                            <div>
+                                <label class="block text-sm font-medium text-gray-700 mb-1">Task ID</label>
+                                <select id="taskToAssign" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring" required>
+                                    <option value="">Select a task</option>
+                                </select>
+                            </div>
+
+                            <!-- Assignment Type -->
+                            <div>
+                                <label class="block text-sm font-medium text-gray-700 mb-1">Assignment Type</label>
+                                <select id="assignmentType" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring" required>
+                                    <option value="lowest_done">Lowest Done</option>
+                                    <option value="lowest_total">Lowest Total</option>
+                                    <option value="random">Random</option>
+                                    <option value="specific">Specific</option>
+                                </select>
+                            </div>
+
+                            <!-- User Selectbox -->
+                            <div id="userSelectContainer" class="hidden">
+                                <label class="block text-sm font-medium text-gray-700 mb-1">User</label>
+                                <select id="assigneeUser" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring">
+                                    <option value="">Select a user</option>
+                                </select>
+                            </div>
+
+                            <!-- Assignment Button -->
+                            <button id="assignTask" class="w-full bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors">
+                                Start Process
+                            </button>
+                        </div>
+                    </div>
+                    <!-- Leaderboard Panel -->
+                    <div class="bg-white rounded-xl shadow-lg p-6 border border-gray-100">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="text-lg font-semibold text-gray-800">Leaderboard</h3>
+                            <button id="refreshLeaderboard" class="text-blue-600 hover:text-blue-700">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
+                                    fill="currentColor">
+                                    <path fill-rule="evenodd"
+                                        d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z"
+                                        clip-rule="evenodd" />
+                                </svg>
+                            </button>
+                        </div>
+                        <div id="leaderboardList" class="space-y-4">
+                            <!-- Leaderboard items will be added here dynamically -->
+                        </div>
+                    </div>
                     <!-- Auto Check Panel -->
                     <div class="bg-white rounded-xl shadow-lg p-6 border border-gray-100">
-
+                        <!-- Content for Auto Check Panel can be added here -->
                     </div>
                     <!-- Specific Task Panel -->
                     <div class="bg-white rounded-xl shadow-lg p-6 border border-gray-100">
-                       
+                        <!-- Content for Specific Task Panel can be added here -->
                     </div>
-
-
-
-
-
-
                 </div>
 
-                <!-- Sağ Kolon: İstatistikler ve Loglar -->
+                <!-- Right Column: Statistics and Logs -->
                 <div class="lg:col-span-2 space-y-8">
                     <!-- Logs Panel -->
                     <div class="bg-white rounded-xl shadow-lg p-6 border border-gray-100">
-                        <h3 class="text-lg font-semibold text-gray-800 mb-4">İşlem Kayıtları</h3>
+                        <h3 class="text-lg font-semibold text-gray-800 mb-4">Transaction Logs</h3>
                         <div id="logs"
                             class="font-mono text-xs text-gray-700 h-[300px] overflow-y-auto p-4 bg-gray-50 rounded-xl border border-gray-200 break-all">
                         </div>
