--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             from {
                 transform: rotate(0deg);
             }
+
             to {
                 transform: rotate(360deg);
             }
@@ -252,9 +253,13 @@ S1-12345">S1-30899</textarea>
                     <div class="bg-white rounded-xl shadow-lg p-6 border border-gray-100 mb-8">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-semibold text-gray-800">Task Assignment</h3>
-                            <button id="refreshTaskAssignment" class="text-blue-600 hover:text-blue-700 transition-transform duration-500">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                                    <path fill-rule="evenodd" d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z" clip-rule="evenodd"/>
+                            <button id="refreshTaskAssignment"
+                                class="text-blue-600 hover:text-blue-700 transition-transform duration-500">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
+                                    fill="currentColor">
+                                    <path fill-rule="evenodd"
+                                        d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z"
+                                        clip-rule="evenodd" />
                                 </svg>
                             </button>
                         </div>
@@ -262,7 +267,8 @@ S1-12345">S1-30899</textarea>
                             <!-- Task ID Selectbox -->
                             <div>
                                 <label class="block text-sm font-medium text-gray-700 mb-1">Task ID</label>
-                                <select id="taskToAssign" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring" required>
+                                <select id="taskToAssign"
+                                    class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring" required>
                                     <option value="">Select a task</option>
                                 </select>
                             </div>
@@ -270,7 +276,8 @@ S1-12345">S1-30899</textarea>
                             <!-- Assignment Type -->
                             <div>
                                 <label class="block text-sm font-medium text-gray-700 mb-1">Assignment Type</label>
-                                <select id="assignmentType" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring" required>
+                                <select id="assignmentType"
+                                    class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring" required>
                                     <option value="lowest_done">Lowest Done</option>
                                     <option value="lowest_total">Lowest Total</option>
                                     <option value="random">Random</option>
@@ -281,13 +288,15 @@ S1-12345">S1-30899</textarea>
                             <!-- User Selectbox -->
                             <div id="userSelectContainer" class="hidden">
                                 <label class="block text-sm font-medium text-gray-700 mb-1">User</label>
-                                <select id="assigneeUser" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring">
+                                <select id="assigneeUser"
+                                    class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring">
                                     <option value="">Select a user</option>
                                 </select>
                             </div>
 
                             <!-- Assignment Button -->
-                            <button id="assignTask" class="w-full bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors">
+                            <button id="assignTask"
+                                class="w-full bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors">
                                 Start Process
                             </button>
                         </div>
@@ -308,14 +317,6 @@ S1-12345">S1-30899</textarea>
                         <div id="leaderboardList" class="space-y-4">
                             <!-- Leaderboard items will be added here dynamically -->
                         </div>
-                    </div>
-                    <!-- Auto Check Panel -->
-                    <div class="bg-white rounded-xl shadow-lg p-6 border border-gray-100">
-                        <!-- Content for Auto Check Panel can be added here -->
-                    </div>
-                    <!-- Specific Task Panel -->
-                    <div class="bg-white rounded-xl shadow-lg p-6 border border-gray-100">
-                        <!-- Content for Specific Task Panel can be added here -->
                     </div>
                 </div>
 
