--- a/index.html
+++ b/index.html
@@ -195,6 +195,12 @@
                     <option value="To Do">To Do</option>
                 </select>
             </div>
+            <div>
+                <label class="block text-sm font-medium text-gray-700 mb-1">Hariç Tutulacak E-postalar</label>
+                <textarea id="excludedEmails" rows="4" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring"
+                    placeholder="Her satıra bir e-posta giriniz:&#10;user1@example.com&#10;user2@example.com"></textarea>
+                <p class="text-sm text-gray-500 mt-1">Her e-postayı yeni bir satıra yazınız</p>
+            </div>
         </div>
     </div>
 
