--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
             </div>
             <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Hariç Tutulacak E-postalar</label>
-                <textarea id="excludedEmails" rows="4" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring"
+                <textarea id="excludedEmails" rows="4"
+                    class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring"
                     placeholder="Her satıra bir e-posta giriniz:&#10;user1@example.com&#10;user2@example.com"></textarea>
                 <p class="text-sm text-gray-500 mt-1">Her e-postayı yeni bir satıra yazınız</p>
             </div>
@@ -275,23 +276,6 @@
                                 class="w-full bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors">
                                 Start Process
                             </button>
-                        </div>
-                    </div>
-                    <!-- Leaderboard Panel -->
-                    <div class="bg-white rounded-xl shadow-lg p-6 border border-gray-100">
-                        <div class="flex justify-between items-center mb-4">
-                            <h3 class="text-lg font-semibold text-gray-800">Leaderboard</h3>
-                            <button id="refreshLeaderboard" class="text-blue-600 hover:text-blue-700">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
-                                    fill="currentColor">
-                                    <path fill-rule="evenodd"
-                                        d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z"
-                                        clip-rule="evenodd" />
-                                </svg>
-                            </button>
-                        </div>
-                        <div id="leaderboardList" class="space-y-4">
-                            <!-- Leaderboard items will be added here dynamically -->
                         </div>
                     </div>
                 </div>
