--- a/index.html
+++ b/index.html
@@ -250,6 +250,14 @@
                                 </select>
                             </div>
 
+                            <!-- Comment alanı -->
+                            <div class="mt-4">
+                                <label class="block text-sm font-medium text-gray-700 mb-1">Yorum</label>
+                                <textarea id="taskComment" rows="3"
+                                    class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring"
+                                    placeholder="Task ile ilgili bir yorum ekleyin..."></textarea>
+                            </div>
+
                             <!-- Assignment Type -->
                             <div>
                                 <label class="block text-sm font-medium text-gray-700 mb-1">Assignment Type</label>
