Add task status change option during task assignment

--- a/index.html
+++ b/index.html
@@ -258,6 +258,15 @@
                                     placeholder="Task ile ilgili bir yorum ekleyin..."></textarea>
                             </div>
 
+                            <!-- Task Status Checkbox -->
+                            <div class="mt-4 flex items-center">
+                                <input type="checkbox" id="moveToSelectedForDev"
+                                    class="h-4 w-4 text-blue-600 rounded border-gray-300 focus:ring-blue-500">
+                                <label for="moveToSelectedForDev" class="ml-2 block text-sm text-gray-700">
+                                    Task'ı "Selected for Development" durumuna taşı
+                                </label>
+                            </div>
+
                             <!-- Assignment Type -->
                             <div>
                                 <label class="block text-sm font-medium text-gray-700 mb-1">Assignment Type</label>
