Add test mode for task assignment simulation

--- a/index.html
+++ b/index.html
@@ -202,6 +202,15 @@
                     placeholder="Her satıra bir e-posta giriniz:&#10;user1@example.com&#10;user2@example.com"></textarea>
                 <p class="text-sm text-gray-500 mt-1">Her e-postayı yeni bir satıra yazınız</p>
             </div>
+
+            <!-- Test Mode Switch -->
+            <div class="mt-4 flex items-center justify-between">
+                <span class="text-sm font-medium text-gray-700">Test Modu</span>
+                <label class="switch">
+                    <input type="checkbox" id="testMode">
+                    <span class="slider"></span>
+                </label>
+            </div>
         </div>
     </div>
 
