--- a/index.html
+++ b/index.html
@@ -239,15 +239,18 @@
                     <div class="bg-white rounded-xl shadow-lg p-6 border border-gray-100 mb-8">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-semibold text-gray-800">Task Assignment</h3>
-                            <button id="refreshTaskAssignment"
-                                class="text-blue-600 hover:text-blue-700 transition-transform duration-500">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
-                                    fill="currentColor">
-                                    <path fill-rule="evenodd"
-                                        d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z"
-                                        clip-rule="evenodd" />
-                                </svg>
-                            </button>
+                            <div class="flex space-x-2">
+                                <button id="editTargetPoints" class="text-blue-600 hover:text-blue-700 transition-colors">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                                        <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+                                    </svg>
+                                </button>
+                                <button id="refreshTaskAssignment" class="text-blue-600 hover:text-blue-700 transition-transform duration-500">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                                        <path fill-rule="evenodd" d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z" clip-rule="evenodd" />
+                                    </svg>
+                                </button>
+                            </div>
                         </div>
                         <div class="space-y-4">
                             <!-- Task ID Selectbox -->
@@ -285,6 +288,7 @@
                                     <option value="lowest_total">Lowest Total</option>
                                     <option value="random">Random</option>
                                     <option value="specific">Specific</option>
+                                    <option value="under_80">%80<</option>
                                 </select>
                             </div>
 
@@ -316,6 +320,24 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Target Points Modal -->
+    <div id="targetPointsModal" class="fixed inset-0 bg-gray-600 bg-opacity-50 hidden flex items-center justify-center">
+        <div class="bg-white p-6 rounded-lg shadow-xl">
+            <h2 class="text-xl font-bold mb-4">Hedef Puan Belirleme</h2>
+            <div id="targetPointsContent" class="space-y-4">
+                <!-- Dinamik olarak doldurulacak -->
+            </div>
+            <div class="mt-6 flex justify-end space-x-4">
+                <button id="saveTargetPoints" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
+                    Kaydet
+                </button>
+                <button id="closeTargetPointsModal" class="bg-gray-300 text-gray-700 px-4 py-2 rounded hover:bg-gray-400">
+                    Kapat
+                </button>
             </div>
         </div>
     </div>
