--- a/index.html
+++ b/index.html
@@ -326,16 +326,16 @@
 
     <!-- Target Points Modal -->
     <div id="targetPointsModal" class="fixed inset-0 bg-gray-600 bg-opacity-50 hidden flex items-center justify-center">
-        <div class="bg-white p-6 rounded-lg shadow-xl">
-            <h2 class="text-xl font-bold mb-4">Hedef Puan Belirleme</h2>
-            <div id="targetPointsContent" class="space-y-4">
+        <div class="bg-white p-6 rounded-lg shadow-xl max-w-5xl w-full mx-4">
+            <h2 class="text-xl font-bold mb-6">Hedef Puan Belirleme</h2>
+            <div id="targetPointsContent" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 max-h-[60vh] overflow-y-auto pr-2">
                 <!-- Dinamik olarak doldurulacak -->
             </div>
-            <div class="mt-6 flex justify-end space-x-4">
-                <button id="saveTargetPoints" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
+            <div class="mt-6 flex justify-end space-x-4 pt-4 border-t">
+                <button id="saveTargetPoints" class="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700 transition-colors">
                     Kaydet
                 </button>
-                <button id="closeTargetPointsModal" class="bg-gray-300 text-gray-700 px-4 py-2 rounded hover:bg-gray-400">
+                <button id="closeTargetPointsModal" class="bg-gray-300 text-gray-700 px-6 py-2 rounded hover:bg-gray-400 transition-colors">
                     Kapat
                 </button>
             </div>
