Improve UI label and comment for under 80% performance task assignment

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                                     <option value="lowest_total">Lowest Total</option>
                                     <option value="random">Random</option>
                                     <option value="specific">Specific</option>
-                                    <option value="under_80">%80<</option>
+                                    <option value="under_80">Under %80 Performance</option>
                                 </select>
                             </div>
 
