--- a/index.html
+++ b/index.html
@@ -292,12 +292,12 @@
                                 </select>
                             </div>
 
-                            <!-- User Selectbox -->
+                            <!-- Developer Selectbox -->
                             <div id="userSelectContainer" class="hidden">
-                                <label class="block text-sm font-medium text-gray-700 mb-1">User</label>
+                                <label class="block text-sm font-medium text-gray-700 mb-1">Developer</label>
                                 <select id="assigneeUser"
                                     class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring">
-                                    <option value="">Select a user</option>
+                                    <option value="">Select a developer</option>
                                 </select>
                             </div>
 
