--- a/index.html
+++ b/index.html
@@ -211,6 +211,15 @@
                     <span class="slider"></span>
                 </label>
             </div>
+
+            <div>
+                <label class="block text-sm font-medium text-gray-700 mb-1">Performance Calculation Type</label>
+                <select id="performanceType"
+                    class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring" required>
+                    <option value="done">Done Points</option>
+                    <option value="all">All Points</option>
+                </select>
+            </div>
         </div>
     </div>
 
