--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                                 <input type="checkbox" id="moveToSelectedForDev"
                                     class="h-4 w-4 text-blue-600 rounded border-gray-300 focus:ring-blue-500">
                                 <label for="moveToSelectedForDev" class="ml-2 block text-sm text-gray-700">
-                                    Task'ı "Selected for Development" durumuna taşı
+                                    Task'ı "SFD" durumuna taşı
                                 </label>
                             </div>
 
@@ -306,7 +306,7 @@
                                 <label class="block text-sm font-medium text-gray-700 mb-1">Developer</label>
                                 <select id="assigneeUser"
                                     class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring">
-                                    <option value="">Select a developer</option>
+                                    <option value="">Select a Developer</option>
                                 </select>
                             </div>
 
