--- a/index.html
+++ b/index.html
@@ -220,6 +220,18 @@
                     <option value="all">All Points</option>
                 </select>
             </div>
+
+            <div>
+                <label class="block text-sm font-medium text-gray-700 mb-2 flex flex-col">
+                    PROJECT_KEY Filtresi Olmadan Hesaplanacak Kullanıcılar
+                    <span class="text-xs text-gray-500">(Her satıra bir e-posta)</span>
+                </label>
+                <textarea
+                    id="excludedFromProjectKeyFilter"
+                    class="w-full px-3 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-all"
+                    rows="4"
+                    placeholder="ornek@email.com"></textarea>
+            </div>
         </div>
     </div>
 
