Add manual task input option for task assignment

--- a/index.html
+++ b/index.html
@@ -280,7 +280,15 @@
                                 <select id="taskToAssign"
                                     class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring" required>
                                     <option value="">Select a task</option>
+                                    <option value="manual">Manuel Task Gir</option>
                                 </select>
+                            </div>
+
+                            <!-- Manuel Task Input -->
+                            <div id="manualTaskContainer" class="hidden mt-2">
+                                <input type="text" id="manualTaskInput"
+                                    class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring"
+                                    placeholder="Task ID'sini girin (örn: S1-123)">
                             </div>
 
                             <!-- Comment alanı -->
