Translate developer leaderboard UI elements to Turkish

--- a/index.html
+++ b/index.html
@@ -492,13 +492,13 @@
                     Developer Leaderboard
                   </h2>
                   <div class="flex items-center space-x-2">
-                    <span class="text-sm text-gray-600">Order By:</span>
+                    <span class="text-sm text-gray-600">Sırala:</span>
                     <select
                       id="leaderboardOrder"
                       class="text-sm border border-gray-300 rounded-md px-3 py-1.5 focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
                     >
-                      <option value="done">Done Points</option>
-                      <option value="all">All Points</option>
+                      <option value="done">Done Puanlar</option>
+                      <option value="all">Tüm Puanlar</option>
                     </select>
                   </div>
                 </div>
