Hide "Assign to Selim" button when no task is selected and open DevTools on app launch

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                 <!-- Selim'e Ata Butonu -->
                 <button
                   id="assignToSelim"
-                  class="w-full mt-2 bg-gradient-to-r from-pink-500 to-purple-500 text-white py-2 px-4 rounded-lg hover:from-pink-600 hover:to-purple-600 transition-all transform hover:scale-105 flex items-center justify-center space-x-2"
+                  class="w-full mt-2 bg-gradient-to-r from-pink-500 to-purple-500 text-white py-2 px-4 rounded-lg hover:from-pink-600 hover:to-purple-600 transition-all transform hover:scale-105 flex items-center justify-center space-x-2 hidden"
                 >
                   <span>Taskı Selim'e Ata</span>
                 </button>
