Add stop automation button and functionality

--- a/index.html
+++ b/index.html
@@ -502,6 +502,16 @@
               </svg>
               <span>Otomasyonu Başlat</span>
             </button>
+
+            <button
+              id="stopAutomation"
+              class="w-full mt-2 bg-red-600 text-white py-2 px-4 rounded-lg hover:bg-red-700 transition-colors flex items-center justify-center space-x-2 hidden"
+            >
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM7 7a1 1 0 011-1h4a1 1 0 110 2H8a1 1 0 01-1-1z" clip-rule="evenodd" />
+              </svg>
+              <span>Otomasyonu Durdur</span>
+            </button>
           </div>
         </div>
           </div>
