--- a/index.html
+++ b/index.html
@@ -248,6 +248,25 @@
           </p>
         </div>
 
+        <!-- Otomasyon Aralığı -->
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-1">
+            Otomasyon Aralığı (dakika)
+          </label>
+          <input
+            type="number"
+            id="automationInterval"
+            class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring"
+            placeholder="Dakika cinsinden"
+            min="1"
+            step="1"
+            value="1"
+          />
+          <p class="text-sm text-gray-500 mt-1">
+            Otomasyonun kaç dakikada bir çalışacağını belirleyin
+          </p>
+        </div>
+
         <!-- Test Mode Switch -->
         <div class="mt-4 flex items-center justify-between">
           <span class="text-sm font-medium text-gray-700">Test Modu</span>
@@ -365,7 +384,7 @@
                     class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded"
                   />
                   <label for="automationUpdateStatus" class="ml-2 block text-sm text-gray-700">
-                    Görev durumunu "Selected for Development" olarak güncelle
+                    Task durumunu "Selected for Development" olarak güncelle
                   </label>
                 </div>
     
