--- a/index.html
+++ b/index.html
@@ -274,10 +274,10 @@
         </div>
         <div>
           <label class="block text-sm font-medium text-gray-700 mb-1"
-            >Hariç Tutulacak E-postalar</label
+            >Developer Listesi</label
           >
           <textarea
-            id="excludedEmails"
+            id="includedEmails"
             rows="4"
             class="w-full px-4 py-2 rounded-lg border border-gray-300 focus-ring"
             placeholder="Her satıra bir e-posta giriniz:&#10;user1@example.com&#10;user2@example.com"
